# Binary-to-C-decompiler

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  analysis.c  data.c  disasm.c  elf.c  image.c  macho.c  main.c  opsoup.h  optimize.c  pe.c  ref.c
.github/workflows/: ci.yml
gui/: mainwindow.cpp  mainwindow.h
tests/: CMakeLists.txt  test_data.c  test_disasm.c  test_elf.c  test_image.c  test_label.c  test_main.c
